Fix tile count calculation when tile number exceeds 32 bit range

BUG: 342397